# idcquery

./: FORMAT.md  README.md  idcquery.schema.json  pyproject.toml
src/idcquery/: __init__.py  __main__.py  idcquery.py  markdown_utils.py  templates.py
src/idcquery/schema/: idcquery.schema.json
src/idcquery/templates/: empty_template.jinja2  idcquery_markdown_template.jinja2  idcquery_text_template.jinja2
